// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@lad-tech/mobydick-core/SnackbarBase/Title should renders correctly with titleFont 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#353A45",
        "fontFamily": "Inter-Medium",
        "fontSize": 16,
        "fontWeight": "500",
        "lineHeight": 20,
        "minHeight": 20,
      },
      [
        {
          "flex": 1,
          "paddingRight": 8,
        },
        {
          "backgroundColor": "#000",
        },
      ],
    ]
  }
>
  title two
</Text>
`;

exports[`@lad-tech/mobydick-core/SnackbarBase/Title should renders correctly without titleFont 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#FFFFFF",
        "fontFamily": "Inter-Medium",
        "fontSize": 14,
        "fontWeight": "500",
        "lineHeight": 18,
        "minHeight": 18,
      },
      [
        {
          "flex": 1,
          "paddingRight": 8,
        },
        {
          "flex": 1,
        },
      ],
    ]
  }
>
  title
</Text>
`;
